; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/storage/page/extr_bufpage.c_PageGetTempPageCopySpecial.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/storage/page/extr_bufpage.c_PageGetTempPageCopySpecial.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @PageGetTempPageCopySpecial(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %5 = load i64, i64* %2, align 8
  %6 = call i32 @PageGetPageSize(i64 %5)
  store i32 %6, i32* %3, align 4
  %7 = load i32, i32* %3, align 4
  %8 = call i64 @palloc(i32 %7)
  store i64 %8, i64* %4, align 8
  %9 = load i64, i64* %4, align 8
  %10 = load i32, i32* %3, align 4
  %11 = load i64, i64* %2, align 8
  %12 = call i32 @PageGetSpecialSize(i64 %11)
  %13 = call i32 @PageInit(i64 %9, i32 %10, i32 %12)
  %14 = load i64, i64* %4, align 8
  %15 = call i32 @PageGetSpecialPointer(i64 %14)
  %16 = load i64, i64* %2, align 8
  %17 = call i32 @PageGetSpecialPointer(i64 %16)
  %18 = load i64, i64* %2, align 8
  %19 = call i32 @PageGetSpecialSize(i64 %18)
  %20 = call i32 @memcpy(i32 %15, i32 %17, i32 %19)
  %21 = load i64, i64* %4, align 8
  ret i64 %21
}

declare dso_local i32 @PageGetPageSize(i64) #1

declare dso_local i64 @palloc(i32) #1

declare dso_local i32 @PageInit(i64, i32, i32) #1

declare dso_local i32 @PageGetSpecialSize(i64) #1

declare dso_local i32 @memcpy(i32, i32, i32) #1

declare dso_local i32 @PageGetSpecialPointer(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
